PROTOBUF_GENERATE_CPP(IDENTT_PB_SRC_ALL IDENTT_PB_HDR_ALL
	Store.proto
	Query.proto
	Hrpc.proto
)

PROTOBUF_GENERATE_CPP(IDENTT_PB_SRC_MAIL IDENTT_PB_HDR_MAIL
	Mail.proto
)

set(PROTO_SOURCES ${IDENTT_PB_SRC_ALL} ${IDENTT_PB_SRC_MAIL})
set(IDENTT_SOURCES ${PROTO_SOURCES})

add_library(identt_proto STATIC ${IDENTT_SOURCES})
add_library(identt_proto_mail STATIC ${IDENTT_PB_SRC_MAIL})

include_directories(${IDENTT_PB_HDR_ALL})
